--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -12,9 +12,15 @@
   border-bottom: 1px solid var(--border-primary)
 }
 
-@media (widht >= 768px) {
+@media (width >= 768px) {
   .bar {
     padding: 2rem 1rem;
+  }
+}
+
+@media (width >= 992px) {
+  .bar {
+    display: none;
   }
 }
 
