--- a/src/components/Navigation/styles.module.css
+++ b/src/components/Navigation/styles.module.css
@@ -18,7 +18,7 @@
   display: flex;
 }
 
-@media (width >= 928px) {
+@media (width >= 992px) {
   .navigation {
     display: flex;
   }
@@ -40,6 +40,12 @@
 
   background-color: transparent;
   border: none;
+}
+
+@media (width >= 992px) {
+  .navigation_close {
+    display: none;
+  }
 }
 
 .navigation_link_list {
